# cart/models.py
@@ -1,3 +1,38 @@
 from django.db import models
 
+from shop.models import Product
+from users.models import Profile
+
+
 # Create your models here.
+class Cart(models.Model):
+    profile = models.ForeignKey(Profile, on_delete=models.CASCADE, related_name='carts')
+    created = models.DateTimeField(auto_now_add=True)
+    updated = models.DateTimeField(auto_now=True)
+
+    class Meta:
+        verbose_name = 'Корзина'
+        verbose_name_plural = 'Корзины'
+
+    def __str__(self):
+        return f"Корзина профиля {self.profile.user.username}"
+
+    @property
+    def total_items(self):
+        return sum(item.quantity for item in self.items.all())
+
+    @property
+    def total_price(self):
+        return sum(item.quantity * item.product.price for item in self.items.all())
+
+class CartItem(models.Model):
+    cart = models.ForeignKey(Cart, on_delete=models.CASCADE, related_name='items')
+    product = models.ForeignKey(Product, on_delete=models.CASCADE)
+    quantity = models.PositiveIntegerField(default=1)
+
+    class Meta:
+        verbose_name = 'Элемент корзины'
+        verbose_name_plural = 'Элементы корзины'
+
+    def __str__(self):
+        return f"{self.quantity} x {self.product.name} в корзине {self.cart.id}"
