# cart/urls.py
@@ -1,8 +1,8 @@
 from django.urls import path
 from . import views
+from .views import CartAPIView, CartItemAPIView
 
 urlpatterns = [
-    path('', views.cart_detail, name='cart_detail'),
-    path('add/<int:product_id>/', views.cart_add, name='cart_add'),
-    path('remove/<int:product_id>/', views.cart_remove, name='cart_remove'),
+    path('', CartAPIView.as_view(), name='cart'),
+    path('items/<int:pk>/', CartItemAPIView.as_view(), name='cart-item'),
 ]
