# orders/urls.py
@@ -3,5 +3,5 @@ from . import views
 from .views import OrderAPIView
 
 urlpatterns = [
-    path('orders/', OrderAPIView.as_view(), name='order_api'),
+    path('', OrderAPIView.as_view(), name='order_api'),
 ]
