# swagger.yaml
@@ -150,6 +150,73 @@ paths:
                 type: object
                 additionalProperties: {}
           description: ''
+  /cart/:
+    get:
+      operationId: cart_retrieve
+      tags:
+      - cart
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+          description: ''
+    post:
+      operationId: cart_create
+      tags:
+      - cart
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Cart'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Cart'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Cart'
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+          description: ''
+    delete:
+      operationId: cart_destroy
+      tags:
+      - cart
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
+  /cart/items/{id}/:
+    delete:
+      operationId: cart_items_destroy
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+      tags:
+      - cart
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
   /categories/:
     get:
       operationId: categories_list
@@ -168,9 +235,9 @@ paths:
                 items:
                   $ref: '#/components/schemas/Category'
           description: ''
-  /orders/orders/:
+  /orders/:
     get:
-      operationId: orders_orders_retrieve
+      operationId: orders_retrieve
       tags:
       - orders
       security:
@@ -184,7 +251,7 @@ paths:
                 $ref: '#/components/schemas/Order'
           description: ''
     post:
-      operationId: orders_orders_create
+      operationId: orders_create
       tags:
       - orders
       requestBody:
@@ -209,6 +276,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Order'
           description: ''
+    delete:
+      operationId: orders_destroy
+      tags:
+      - orders
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
   /products/:
     get:
       operationId: products_list
@@ -318,6 +395,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Product'
           description: ''
+    delete:
+      operationId: users_favorites_destroy
+      tags:
+      - users
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
   /users/login/:
     post:
       operationId: users_login_create
@@ -348,6 +435,45 @@ paths:
           description: ''
 components:
   schemas:
+    Cart:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/CartItem'
+          readOnly: true
+        created:
+          type: string
+          format: date-time
+          readOnly: true
+        updated:
+          type: string
+          format: date-time
+          readOnly: true
+      required:
+      - created
+      - id
+      - items
+      - updated
+    CartItem:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        product:
+          type: integer
+        quantity:
+          type: integer
+          maximum: 2147483647
+          minimum: 0
+      required:
+      - id
+      - product
     Category:
       type: object
       properties:
